--- a/html/home.html
+++ b/html/home.html
@@ -140,7 +140,30 @@
           </div>
         </div>
       </div>
-
+   <div class="header-bottom phone-list__mobile">
+        <ul class="body-list">
+          <li class="list-item phone-list__item">
+            <div class="phone-list__title">Городской</div>
+            <a href="#" class="phone-list__link">+375 17 388-11-99</a>
+          </li>
+          <li class="list-item phone-list__item">
+            <div class="phone-list__title">Городской</div>
+            <a href="#" class="phone-list__link">+375 17 388-15-83</a>
+          </li>
+          <li class="list-item phone-list__item">
+            <div class="phone-list__title mobile-title">Velcom</div>
+            <a href="#" class="phone-list__link">+375 44 7-521-521</a>
+          </li>
+          <li class="list-item phone-list__item">
+            <div class="phone-list__title mobile-title">МТС</div>
+            <a href="#" class="phone-list__link">+375 33 7-521-521</a>
+          </li>
+          <li class="list-item phone-list__item">
+            <div class="phone-list__title mobile-title">Life</div>
+            <a href="#" class="phone-list__link">+375 25 7-521-521</a>
+          </li>
+        </ul>
+      </div>
       <div class="header-bottom mobile-menu">
         <div class="header-bottom__inner">
           <div class="container">
